manifests/testing/ingress-test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: g8s
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
  namespace: g8s
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: g8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - nginx.dev.local
    secretName: selfsignedtlsbundle-nginx
  rules:
  - host: nginx.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deployment
            port:
              number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: expose
  namespace: kube-system
spec:
  type: NodePort
  selector:
     app.kubernetes.io/instance: traefik-kube-system
     app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 443
      nodePort: 30443
